--- a/views/main_nav.erb
+++ b/views/main_nav.erb
@@ -1,31 +1,31 @@
 <ul class="nav nav-tabs">
   <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle <%="disabled" unless session[:w_connected]%>" 
+    <a class="nav-link dropdown-toggle <%="disabled" unless session[:w_connected]%>"
       data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Shelley wallets</a>
     <div class="dropdown-menu">
       <a class="dropdown-item" href="/wallets">List</a>
       <a class="dropdown-item" href="/wallets-create">Create</a>
-      <a class="dropdown-item" href="/tx-between-wallets">Send transactions</a>  
-      <a class="dropdown-item" href="/wallets-force-resync">Force resync</a>  
+      <a class="dropdown-item" href="/tx-between-wallets">Send transactions</a>
+      <a class="dropdown-item" href="/wallets-force-resync">Force resync</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="/wallets-create-many">Create many</a>
-      <a class="dropdown-item" href="/wallets-delete-all">Delete all</a>  
+      <a class="dropdown-item" href="/wallets-delete-all">Delete all</a>
     </div>
   </li>
   <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle <%="disabled" unless session[:w_connected]%>" 
+    <a class="nav-link dropdown-toggle <%="disabled" unless session[:w_connected]%>"
       data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Byron wallets</a>
     <div class="dropdown-menu">
       <a class="dropdown-item" href="/byron-wallets">List</a>
       <a class="dropdown-item" href="/byron-wallets-create">Create</a>
-      <a class="dropdown-item" href="/byron-wallets-force-resync">Force resync</a>  
+      <a class="dropdown-item" href="/byron-wallets-force-resync">Force resync</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="/byron-wallets-create-many">Create many</a>
-      <a class="dropdown-item" href="/byron-wallets-delete-all">Delete all</a>      
+      <a class="dropdown-item" href="/byron-wallets-delete-all">Delete all</a>
     </div>
   </li>
   <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle <%="disabled" unless session[:w_connected]%>" 
+    <a class="nav-link dropdown-toggle <%="disabled" unless session[:w_connected]%>"
       data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Stake-pools</a>
     <div class="dropdown-menu">
       <a class="dropdown-item" href="/stake-pools">List</a>
@@ -33,18 +33,19 @@
       <a class="dropdown-item" href="/stake-pools-quit">Quit</a>
     </div>
   </li>
-  
-  
+
+
   <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle <%="disabled" unless session[:w_connected]%>" 
-      data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Misc</a>
+    <a class="nav-link dropdown-toggle <%="disabled" unless session[:w_connected]%>"
+      data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Network</a>
     <div class="dropdown-menu">
       <a class="dropdown-item" href="/network-info">Network Information</a>
       <a class="dropdown-item" href="/network-params">Network Parameters</a>
+      <a class="dropdown-item" href="/network-clock">Network Clock</a>
     </div>
   </li>
   <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle <%="disabled" unless session[:j_connected]%>" 
+    <a class="nav-link dropdown-toggle <%="disabled" unless session[:j_connected]%>"
       data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Jörmungandr</a>
     <div class="dropdown-menu">
       <a class="dropdown-item" href="/jorm-stats">Stats</a>
@@ -53,7 +54,7 @@
     </div>
   </li>
   <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" 
+    <a class="nav-link dropdown-toggle"
       data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Tools</a>
     <div class="dropdown-menu">
       <a class="dropdown-item" href="/gen-mnemonics">Generate mnemonics</a>
