Support create wallet from pub key

--- a/views/main_nav.erb
+++ b/views/main_nav.erb
@@ -5,6 +5,7 @@
     <div class="dropdown-menu">
       <a class="dropdown-item" href="/wallets">List</a>
       <a class="dropdown-item" href="/wallets-create">Create</a>
+      <a class="dropdown-item" href="/wallets-create-from-pub-key">Create from pub key</a>
       <a class="dropdown-item" href="/tx-between-wallets">Send transactions</a>
       <a class="dropdown-item" href="/wallets-force-resync">Force resync</a>
       <div class="dropdown-divider"></div>
