Byron wallets transactions (cardano-node)

--- a/views/main_nav.erb
+++ b/views/main_nav.erb
@@ -19,6 +19,7 @@
     <div class="dropdown-menu">
       <a class="dropdown-item" href="/byron-wallets">List</a>
       <a class="dropdown-item" href="/byron-wallets-create">Create</a>
+      <a class="dropdown-item" href="/byron-tx-to-address">Send transactions</a>
       <a class="dropdown-item" href="/byron-wallets-force-resync">Force resync</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="/byron-wallets-create-many">Create many</a>
