--- a/views/form_tx_between_wallets.erb
+++ b/views/form_tx_between_wallets.erb
@@ -1,25 +1,28 @@
 <%
-wallets = session[:wallets] if session[:wallets]
+# wallets = wallets
+url_path = request.env['PATH_INFO'].to_s
+byron_ep = "/byron-tx-between-wallets"
+shelley_ep = "/tx-between-wallets"
 wid = params[:wid] if params[:wid]
 %>
 <div class="list-group">
   <div class="list-group-item">
-    <form action="/tx-between-wallets" method="POST">
+    <form action="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>" method="POST">
       <div class="form-group">
         <label for="wid_src">Source Wallet</label>
         <select class="form-control" name="wid_src" id="wid_src">
           <% wallets.each do |w| %>
-          <option <%= wid == w['id'] ? "selected" : "" %> value="<%= w['id'] %>"> 
-            <%= "#{w['name']} [id: #{w['id']}, balance available: #{w['balance']['available']['quantity']}]" %> 
-          </option>      
+          <option <%= wid == w['id'] ? "selected" : "" %> value="<%= w['id'] %>">
+            <%= "#{w['name']} [id: #{w['id']}, balance available: #{w['balance']['available']['quantity']}]" %>
+          </option>
           <% end %>
-        </select>   
+        </select>
         <label for="pass">Passphrase</label>
-        <input type="text" class="form-control" name="pass" id="pass" placeholder="Passphrase" value="Secure Passphrase">   
+        <input type="text" class="form-control" name="pass" id="pass" placeholder="Passphrase" value="Secure Passphrase">
         <label for="amount">Amount</label>
         <input type="text" class="form-control" name="amount" id="amount" placeholder="Amount to send" value="1">
       </div>
-      
+
       <div class="form-group">
       </div>
 
@@ -27,13 +30,13 @@ wid = params[:wid] if params[:wid]
         <label for="wid_dst">Destination Wallet</label>
         <select class="form-control" name="wid_dst" id="wid_dst">
           <% wallets.each do |w| %>
-          <option value="<%= w['id'] %>"> <%= "#{w['name']} [id: #{w['id']}, balance total: #{w['balance']['total']['quantity']}]" %> </option>      
+          <option value="<%= w['id'] %>"> <%= "#{w['name']} [id: #{w['id']}, balance total: #{w['balance']['total']['quantity']}]" %> </option>
           <% end %>
-        </select> 
+        </select>
         <small id="help" class="form-text text-muted">I will pick up an unused address from that wallet and send funds to it.</small>
       </div>
 
-      
+
       <button type="submit" class="btn btn-success">Send Tx</button>
       (or <a href="/tx-to-address?wid=<%= wid %>">send to address</a>)
     </form>
