--- a/views/form_tx_to_address.erb
+++ b/views/form_tx_to_address.erb
@@ -1,25 +1,28 @@
 <%
-wallets = session[:wallets] if session[:wallets]
+ # wallets = wallets
+url_path = request.env['PATH_INFO'].to_s
+byron_ep = "/byron-tx-to-address"
+shelley_ep = "/tx-to-address"
 wid = params[:wid] if params[:wid]
 %>
 <div class="list-group">
   <div class="list-group-item">
-    <form action="/tx-to-address" method="POST">
+    <form action="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>" method="POST">
       <div class="form-group">
         <label for="wid_src">Source Wallet</label>
         <select class="form-control" name="wid_src" id="wid_src">
           <% wallets.each do |w| %>
-          <option <%= wid == w['id'] ? "selected" : "" %> value="<%= w['id'] %>"> 
-            <%= "#{w['name']} [id: #{w['id']}, balance available: #{w['balance']['available']['quantity']}]" %> 
-          </option>      
+          <option <%= wid == w['id'] ? "selected" : "" %> value="<%= w['id'] %>">
+            <%= "#{w['name']} [id: #{w['id']}, balance available: #{w['balance']['available']['quantity']}]" %>
+          </option>
           <% end %>
-        </select>   
+        </select>
         <label for="pass">Passphrase</label>
-        <input type="text" class="form-control" name="pass" id="pass" placeholder="Passphrase" value="Secure Passphrase">   
+        <input type="text" class="form-control" name="pass" id="pass" placeholder="Passphrase" value="Secure Passphrase">
         <label for="amount">Amount</label>
         <input type="text" class="form-control" name="amount" id="amount" placeholder="Amount to send" value="1">
       </div>
-      
+
       <div class="form-group">
       </div>
 
@@ -29,7 +32,7 @@ wid = params[:wid] if params[:wid]
 
       </div>
 
-      
+
       <button type="submit" class="btn btn-success">Send Tx</button>
       (or <a href="/tx-between-wallets?wid=<%= wid %>">send between wallets</a>)
     </form>
