Utxo for Byron wallets

--- a/views/utxo_details.erb
+++ b/views/utxo_details.erb
@@ -1,13 +1,15 @@
 <%
-  utxo = session[:utxo] if session[:utxo]
-  wal = session[:wal] if session[:wal]
+  # utxo = utxo
+  # wal = wal
+  url_path = request.env['PATH_INFO'].to_s
 %>
 <script src="https://www.gstatic.com/charts/loader.js"></script>
 <script src="../../../chartkick.js" type="text/javascript"></script>
 
 <div class="list-group">
     <div class="list-group-item">
-      <small><a href="/wallets/<%= wal['id']%>/utxo">refresh</a></small> | <small><a href="/wallets/<%= wal['id']%>">go back to wallet</a></small>
+        <small><a href="<%= (url_path.include? "byron") ? "/byron-wallets/" : "/wallets/" %><%= wal['id'] %>/utxo">refresh</a></small>
+      | <small><a href="<%= (url_path.include? "byron") ? "/byron-wallets/" : "/wallets/" %><%= wal['id'] %>">go back to wallet</a></small>
       <div class="card">
           <div class="card-body">
               <%= column_chart utxo['distribution'].sort, title: "#{wal['name']} UTxO distribution" %>
