--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -31,8 +31,8 @@
                data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Manage</a>
              <div class="dropdown-menu">
                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#confirm-delete">Delete</a>
-               <a class="dropdown-item disabled" href="/wallet-update-pass">Update passphrase</a>
-               <a class="dropdown-item disabled" href="/wallet-update-name">Update name</a>
+               <a class="dropdown-item" href="/wallets/<%= id %>/update">Update name</a>
+               <a class="dropdown-item" href="/wallets/<%= id %>/update-pass">Update passphrase</a>
              </div>
            </div>
            <div>
@@ -41,7 +41,7 @@
              <div class="dropdown-menu">
                <a class="dropdown-item" href="/tx-between-wallets?wid=<%= id %>">Between my wallets</a>
                <a class="dropdown-item" href="/tx-to-address?wid=<%= id %>">To address</a>
-               <a class="dropdown-item disabled" href="/tx-to-address?wid=<%= id %>">Tx Fee</a>
+               <a class="dropdown-item" href="/tx-to-address?wid=<%= id %>">Tx Fee</a>
              </div>
            </div>
            <div>
@@ -64,6 +64,15 @@
           <a class="nav-link" href="/byron-wallets">List All Byron</a>
           <div>
             <a class="nav-link dropdown-toggle"
+              data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Manage</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#" data-toggle="modal" data-target="#confirm-delete">Delete</a>
+              <a class="dropdown-item" href="/byron-wallets/<%= id %>/update">Update name</a>
+              <a class="dropdown-item" href="/byron-wallets/<%= id %>/update-pass">Update passphrase</a>
+            </div>
+          </div>
+          <div>
+            <a class="nav-link dropdown-toggle"
               data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Tx</a>
             <div class="dropdown-menu">
               <a class="dropdown-item disabled" href="/byron-tx-between-wallets?wid=<%= id %>">Between my wallets</a>
@@ -71,7 +80,6 @@
               <a class="dropdown-item disabled" href="/byron-tx-to-address?wid=<%= id %>">Tx Fee</a>
             </div>
           </div>
-          <a class="nav-link" href="#" data-toggle="modal" data-target="#confirm-delete">Delete</a>
           <a class="nav-link"  href="/byron-wallets-migrate<%="?wid=#{wal['id']}"%>">Migrate</a>
           <a class="nav-link"  href="/byron-wallets-migration-fee/<%="#{wal['id']}"%>">Migration Fee</a>
           <a class="nav-link" href="/byron-wallets/<%= wal['id']%>/utxo">UTxO</a>
