--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -41,7 +41,7 @@
              <div class="dropdown-menu">
                <a class="dropdown-item" href="/tx-between-wallets?wid=<%= id %>">Between my wallets</a>
                <a class="dropdown-item" href="/tx-to-address?wid=<%= id %>">To address</a>
-               <a class="dropdown-item" href="/tx-to-address?wid=<%= id %>">Tx Fee</a>
+               <a class="dropdown-item" href="/tx-fee-to-address?wid=<%= id %>">Tx Fee</a>
              </div>
            </div>
            <div>
@@ -77,7 +77,7 @@
             <div class="dropdown-menu">
               <a class="dropdown-item disabled" href="/byron-tx-between-wallets?wid=<%= id %>">Between my wallets</a>
               <a class="dropdown-item" href="/byron-tx-to-address?wid=<%= id %>">To address</a>
-              <a class="dropdown-item disabled" href="/byron-tx-to-address?wid=<%= id %>">Tx Fee</a>
+              <a class="dropdown-item" href="/byron-tx-fee-to-address?wid=<%= id %>">Tx Fee</a>
             </div>
           </div>
           <a class="nav-link"  href="/byron-wallets-migrate<%="?wid=#{wal['id']}"%>">Migrate</a>
