Use chartkick.js from CDN

--- a/views/utxo_details.erb
+++ b/views/utxo_details.erb
@@ -4,7 +4,7 @@
   url_path = request.env['PATH_INFO'].to_s
 %>
 <script src="https://www.gstatic.com/charts/loader.js"></script>
-<script src="../../../chartkick.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/chartkick/2.3.0/chartkick.min.js" type="text/javascript"></script>
 
 <div class="list-group">
     <div class="list-group-item">
