Colored status badges on wallet/wallets view

--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -103,9 +103,8 @@
          <br/>
          <small><b>ID:</b> <%= id %></small><br/>
          <small>
-           <b>Status:</b> <%= status %>
-                          <%= status == "syncing" ? ", Progress: #{wal['state']['progress']['quantity']}%" : ""%>
-
+           <b>Status:</b>
+           <%= render_wal_status status, wal %>
          </small><br/>
          <small>
            <b>Tip:</b> (Height: <%= wal['tip']['height']['quantity'] %>
