--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,15 +11,23 @@
     <title>Icarus</title>
   </head>
   <body>
-    <div class="container-fluid">
-      <h2 title="Designed to crash (and take wallet-backend with it...)"> 
-        <svg height="32" class="octicon octicon-bug" viewBox="0 0 16 16" version="1.1" width="32" aria-hidden="true">
-          <path fill-rule="evenodd" d="M11 10h3V9h-3V8l3.17-1.03-.34-.94L11 7V6c0-.55-.45-1-1-1V4c0-.48-.36-.88-.83-.97L10.2 2H12V1H9.8l-2 2h-.59L5.2 1H3v1h1.8l1.03 1.03C5.36 3.12 5 3.51 5 4v1c-.55 0-1 .45-1 1v1l-2.83-.97-.34.94L4 8v1H1v1h3v1L.83 12.03l.34.94L4 12v1c0 .55.45 1 1 1h1l1-1V6h1v7l1 1h1c.55 0 1-.45 1-1v-1l2.83.97.34-.94L11 11v-1zM9 5H6V4h3v1z"></path>
-        </svg> 
-        <a href="/"> Icarus </a> 
-      </h2>
+    <nav class="navbar bg-light">
+      <div class="row">
+        &nbsp;
+        &nbsp;
+        <a href="/" title="Icarus">
+          <svg height="32" class="octicon octicon-bug" viewBox="0 0 16 16" version="1.1" width="32" aria-hidden="true">
+            <path fill-rule="evenodd" d="M11 10h3V9h-3V8l3.17-1.03-.34-.94L11 7V6c0-.55-.45-1-1-1V4c0-.48-.36-.88-.83-.97L10.2 2H12V1H9.8l-2 2h-.59L5.2 1H3v1h1.8l1.03 1.03C5.36 3.12 5 3.51 5 4v1c-.55 0-1 .45-1 1v1l-2.83-.97-.34.94L4 8v1H1v1h3v1L.83 12.03l.34.94L4 12v1c0 .55.45 1 1 1h1l1-1V6h1v7l1 1h1c.55 0 1-.45 1-1v-1l2.83.97.34-.94L11 11v-1zM9 5H6V4h3v1z"></path>
+          </svg>
+        </a>
+        &nbsp;
         <%= erb :form_connect %>
-        <%= erb :main_nav %>
+      </div>
+      <small id="version">v2020-05-06</small>
+    </nav>
+    <%= erb :main_nav %>
+    <br/>
+    <div class="container-fluid">
         <%= yield %>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
