--- a/views/utxo_details.erb
+++ b/views/utxo_details.erb
@@ -3,7 +3,9 @@
   # wal = wal
   url_path = request.env['PATH_INFO'].to_s
 %>
-<script src="https://www.gstatic.com/charts/loader.js"></script>
+<!-- <script src="https://www.gstatic.com/charts/loader.js"></script> -->
+<script src="https://code.highcharts.com/highcharts.js"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/chartkick/2.3.0/chartkick.min.js" type="text/javascript"></script>
 
 <div class="list-group">
