--- a/views/layout.erb
+++ b/views/layout.erb
@@ -23,7 +23,10 @@
         &nbsp;
         <%= erb :form_connect %>
       </div>
-      <small id="version">v2020-05-06</small>
+      <small>
+        Version: <span id="version">v2020-05-06</span><br/>
+        Platform: <%= session[:platform] %>
+      </small>
     </nav>
     <%= erb :main_nav %>
     <br/>
