--- a/views/form_byron_wallet_address.erb
+++ b/views/form_byron_wallet_address.erb
@@ -14,7 +14,7 @@ ep = "/byron-wallets/#{wid}/address"
             placeholder="Passphrase" value="Secure Passphrase">
         <label for="epoch_number">Index</label>
         <input type="text" class="form-control" name="idx" id="idx"
-            placeholder="Index" value="0">
+            placeholder="Index" value="2147483648">
       </div>
       <button type="submit" class="btn btn-success">Gen address</button>
     </form>
