Remove tx between wallets for byron

--- a/views/form_tx_to_address.erb
+++ b/views/form_tx_to_address.erb
@@ -34,7 +34,12 @@ wid = params[:wid] if params[:wid]
 
 
       <button type="submit" class="btn btn-success">Send Tx</button>
-      (or <a href="/tx-between-wallets?wid=<%= wid %>">send between wallets</a>)
+      <%
+        # No send between wallets for Byron
+        unless url_path.include? "byron"
+      %>
+        (or <a href="/tx-between-wallets?wid=<%= wid %>">send between wallets</a>)
+      <% end %>
     </form>
   </div>
 </div>
