--- a/views/form_byron_wallet_address.erb
+++ b/views/form_byron_wallet_address.erb
@@ -1,11 +1,14 @@
 <%
-# url_path = request.env['PATH_INFO'].to_s
+url_path = request.env['PATH_INFO'].to_s
 # byron_ep = "/byron-wallets/#{wal['id']}/update-pass"
 # shelley_ep = "/wallets/#{wal['id']}/update-pass"
 # wid = wal['id']
 ep = "/byron-wallets/#{wid}/address"
 %>
 <div class="list-group">
+  <div class="list-group-item">
+    <small><a href="<%= (url_path.include? "byron") ? "/byron-wallets/" : "/wallets/" %><%= wid %>">go back to wallet</a></small>
+  </div>
   <div class="list-group-item">
     <form action="<%= ep %>" method="POST">
       <div class="form-group">
