--- a/views/form_wallet_update.erb
+++ b/views/form_wallet_update.erb
@@ -2,9 +2,12 @@
 url_path = request.env['PATH_INFO'].to_s
 byron_ep = "/byron-wallets/#{wal['id']}/update"
 shelley_ep = "/wallets/#{wal['id']}/update"
-wid = params[:wid] if params[:wid]
+wid = wal['id']
 %>
 <div class="list-group">
+  <div class="list-group-item">
+    <small><a href="<%= (url_path.include? "byron") ? "/byron-wallets/" : "/wallets/" %><%= wid %>">go back to wallet</a></small>
+  </div>
   <div class="list-group-item">
     <form action="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>" method="POST">
       <div class="form-group">
