--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -143,9 +143,9 @@
                 unused = addresses.select{ |a| a['state'] == "unused" }
             %>
                <small><b>Addresses:</b> <br/>
-                         &nbsp;&nbsp;<a href="#" onClick="showIt('addr')">Total:</a> <span id="addresses_total"><%= addresses.size %></span> <br/>
-                          &nbsp;&nbsp;&nbsp;&nbsp;<a href="#" onClick="showIt('addr_used')">Used:</a> <span id="addresses_used"><%= used.size %></span>  <br/>
-                          &nbsp;&nbsp;&nbsp;&nbsp;<a href="#" onClick="showIt('addr_unused')">Unused:</a> <span id="addresses_unused"><%= unused.size %></span>  <br/>
+                         &nbsp;&nbsp;<a href="#" onClick="showIt('addr')">Total:</a> <span id="addr_size"><%= addresses.size %></span> <br/>
+                          &nbsp;&nbsp;&nbsp;&nbsp;<a href="#" onClick="showIt('addr_used')">Used:</a> <span id="addr_used_size"><%= used.size %></span>  <br/>
+                          &nbsp;&nbsp;&nbsp;&nbsp;<a href="#" onClick="showIt('addr_unused')">Unused:</a> <span id="addr_unused_size"><%= unused.size %></span>  <br/>
 
                </small>
             <% end %>
@@ -160,11 +160,11 @@
            <small><b>Transactions:</b>  <br/>
                  &nbsp;&nbsp;<a href="#" onClick="showIt('txs')" >Total:</a> <span id="txs_total"><%= txs.size %></span> <br/>
                  &nbsp;&nbsp;&nbsp;&nbsp;Status: <br/>
-                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" onClick="showIt('txs_pending')" >Pending:</a>  <span id="txs_pending"><%= txs_pending.size %></span> <br/>
-                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" onClick="showIt('txs_inledger')" >InLedger:</a>  <span id="txs_inledger"><%= txs_inledger.size %></span> <br/>
+                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" onClick="showIt('txs_pending')" >Pending:</a>  <span id="txs_pending_size"><%= txs_pending.size %></span> <br/>
+                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" onClick="showIt('txs_inledger')" >InLedger:</a>  <span id="txs_inledger_size"><%= txs_inledger.size %></span> <br/>
                  &nbsp;&nbsp;&nbsp;&nbsp;Direction: <br/>
-                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" onClick="showIt('txs_in')" >Incoming:</a>  <span id="txs_in"><%= txs_in.size %></span> <br/>
-                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" onClick="showIt('txs_out')" >Outgoing:</a>  <span id="txs_out"><%= txs_out.size %></span> <br/>
+                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" onClick="showIt('txs_in')" >Incoming:</a>  <span id="txs_in_size"><%= txs_in.size %></span> <br/>
+                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" onClick="showIt('txs_out')" >Outgoing:</a>  <span id="txs_out_size"><%= txs_out.size %></span> <br/>
            </small><br/>
            <% end %>
 
