--- a/views/form_create_wallet.erb
+++ b/views/form_create_wallet.erb
@@ -6,33 +6,33 @@
 <div class="list-group">
   <div class="list-group-item">
     <form action="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>" method="POST">
-      <% if url_path.include? "byron" %>      
+      <% if url_path.include? "byron" %>
         <div class="form-group">
           <label for="style">Style</label>
           <select class="form-control" name="style" id="style">
-            <option value="random">random</option>  
-            <option value="icarus">icarus</option>  
-            <option value="trezor">trezor</option>  
-            <option value="ledger">ledger</option>  
+            <option value="random">random</option>
+            <option value="icarus">icarus</option>
+            <option value="trezor">trezor</option>
+            <option value="ledger">ledger</option>
           </select>
         </div>
       <% end %>
-      
+
       <div class="form-group">
         <label for="wal_name">Wallet name</label>
         <input type="text" class="form-control" name="wal_name" id="wal_name" placeholder="Wallet Name" value="My Test Wallet">
       </div>
-      
+
       <div class="form-group">
         <label for="pass">Passphrase</label>
         <input type="text" class="form-control" name="pass" id="pass" placeholder="Passphrase" value="Secure Passphrase">
       </div>
-      
+
       <div class="form-group">
         <label for="mnemonics">Mnemonic words</label>
-        <textarea class="form-control" name="mnemonics" id="mnemonics" rows="3"><%= session[:mnemonics]%></textarea>
+        <textarea class="form-control" name="mnemonics" id="mnemonics" rows="3"><%= mnemonics %></textarea>
       </div>
-      
+
       <%# Don't show address pool gap for Byron wallets %>
       <% unless url_path.include? "byron" %>
           <div class="form-group">
@@ -40,12 +40,12 @@
             <select class="form-control" name="pool_gap" id="pool_gap">
               <% 10.upto 100 do |i| %>
               <option <%= i == 20 ? "selected" : "" %> <%= "value=\"#{i}\">#{i}" %></option>
-              
+
               <% end %>
             </select>
           </div>
       <% end %>
-      
+
       <button type="submit" class="btn btn-success">Create</button>
     </form>
   </div>
