--- a/views/main_nav.erb
+++ b/views/main_nav.erb
@@ -50,7 +50,7 @@
       data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Tools</a>
     <div class="dropdown-menu">
       <a class="dropdown-item" href="/gen-mnemonics">Generate mnemonics</a>
-      <a class="dropdown-item <%="disabled" unless session[:w_connected]%>"  href="/wallet-jorm-stats">Jörmungandr</a>
+      <a class="dropdown-item" href="/wallet-jorm-stats">Jörmungandr</a>
     </div>
   </li>
 </ul>
