--- a/views/network_params.erb
+++ b/views/network_params.erb
@@ -7,23 +7,26 @@
      <small><a href="/network-params">refresh</a></small>
   </div>
   <div class="list-group-item">
-    <small><b>Slot length: </b> 
+    <small><b>Slot length: </b>
       <%= "#{p['slot_length']['quantity']} #{p['slot_length']['unit']}" %>
-    </small><br/>    
-    <small><b>Epoch stability: </b> 
+    </small><br/>
+    <small><b>Epoch stability: </b>
       <%= "#{p['epoch_stability']['quantity']} #{p['epoch_stability']['unit']}" %>
-    </small><br/> 
-    <small><b>Epoch length: </b> 
+    </small><br/>
+    <small><b>Epoch length: </b>
       <%= "#{p['epoch_length']['quantity']} #{p['epoch_length']['unit']}" %>
-    </small><br/> 
-    <small><b>Active slot coefficient: </b> 
+    </small><br/>
+    <small><b>Active slot coefficient: </b>
       <%= "#{p['active_slot_coefficient']['quantity']} #{p['active_slot_coefficient']['unit']}" %>
-    </small><br/> 
-    <small><b>Genesis block hash: </b> 
+    </small><br/>
+    <small><b>Genesis block hash: </b>
       <%= p['genesis_block_hash'] %>
-    </small><br/> 
-    <small><b>Blockchain start time: </b> 
+    </small><br/>
+    <small><b>Blockchain start time: </b>
       <%= p['blockchain_start_time'] %>
-    </small><br/> 
+    </small><br/>
+    <small><b>Decentralization level: </b>
+      <%= "#{p['decentralization_level']['quantity']} #{p['decentralization_level']['unit']}" %>
+    </small><br/>
   </div>
 </div>
